deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: medas-financial-reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: medas-financial-reporting
  template:
    metadata:
      labels:
        app: medas-financial-reporting
    spec:
      containers:
        - name: medas-financial-reporting
          image: surybang/medas-financial-reporting:1.0.0
          ports:
            - containerPort: 8501
