deployment/minio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-medas-usid0f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio-medas-usid0f
  template:
    metadata:
      labels:
        app: minio-medas-usid0f
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args: ["server", "/data"]
          ports:
            - containerPort: 9000
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: minio-medas-usid0f
spec:
  selector:
    app: minio-medas-usid0f
  ports:
    - name: api
      port: 9000
      targetPort: 9000
