deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medas-financial-reporting
spec:
  selector:
    app: medas-financial-reporting
  ports:
    - port: 80
      targetPort: 8501
